# ising-tests

./: .gitignore  .travis.yml  Accumulator.cc  Accumulator.h  Makefile  Makefile.am  SpinMath.cc  SpinMath.h  System.cc  System.h  WeightedAccumulator.cc  WeightedAccumulator.h  configure.ac  main.cc
src/: BaseSimulation.cc  BaseSimulation.h  BaseSystem.cc  BaseSystem.h  ExactSystem.cc  ExactSystem.h  SpinMath.cc  SpinMath.h  System.cc  System.h  System2D.cc  System2D.h  SystemMC.cc  SystemMC.h  WeightedAccumulator.cc  WeightedAccumulator.h  config.h  config.h.in  ising1D.cc  ising1DMC.cc  main.cc
src/.deps/: Accumulator.Po  SpinMath.Po  System.Po  WeightedAccumulator.Po  main.Po
test/: SpinTest.cc  SpinTest.h  SystemTest.cc  SystemTest.h  WeightedAccumulatorTest.cc  WeightedAccumulatorTest.h  datatest  test.cc
